# local-assistant

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
.claude/commands/: development_session.md  life_graph_crm.md  software_development_session.md
.dev/: terminal_windows.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  graph-tests.yml  test.yml
api/: __init__.py  error_codes.py  errors.py  main.py  openapi.py  pagination.py  state.py  versions.py
api/auth/: jwt.py
api/middleware/: INTEGRATION.md  __init__.py  example_integration.py  metrics.py  rate_limit.py  validate_setup.py
api/routes/: __init__.py  auth.py  chat.py  commitments.py  computer.py  costs.py  documents.py  email.py  health.py  interactions.py  reasoning.py  vendors.py  vision.py
api/schemas/: auth.py  commitment_schemas.py  document_schemas.py  interaction_schemas.py  pagination.py  vendor_schemas.py
api/v1/: __init__.py  documents.py  health.py  vendors.py
cli/: main.py
config/: USAGE.md  __init__.py  anthropic_api_usage_cost.md  cache.yaml  circuit_breaker.yaml  commitment_priority_config.yaml  computer_use.yaml  document_intelligence_config.yaml  entity_resolution_config.yaml  loader.py  microsoft_graph_config.yaml  models_registry.yaml  prometheus.yml  rate_limits.yaml  schemas.py  storage_config.yaml  vision_config.yaml
config/schemas/: invoice.json  invoice_with_bbox.json
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  DEVELOPER_GUIDE.md  HEADER_BBOX_FIX.md  HYBRID_BBOX_EXTRACTION.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  N+1_OPTIMIZATION_SUMMARY.md  USER_GUIDE.md
docs/dev-notes/: API_MIGRATION_GUIDE.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  DEPLOYMENT_READY.md  DOCUMENT_VIEWER_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPROVEMENT_CHECKLIST.yaml  IMPROVEMENT_PLAN.md  INVOICE_UPLOAD_FLOW.md  LIFEGRAPH_IMPLEMENTATION_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_BBOX.md  RATE_LIMIT_SUMMARY.md  README_UV.md  SCRIPTS.md  SERVICES_MAP.md  (+1 more)
memory/: __init__.py  conversations.py  database.py  documents.py  embeddings.py  models.py  queries.py
migrations/: INDEX_RECOMMENDATIONS.md  env.py
observability/: __init__.py  costs.py  lifegraph_logging.py  lifegraph_metrics.py  logs.py  metrics.py  traces.py
planning/: IMPLEMENTATION_PLAN.md
providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
scripts/: README.md  backup_database.sh  check_migration_health.sh  config.sh  dev.sh  health_check.sh  restore_database.sh  start-dev.sh  start.sh  start_server.py  stop-dev.sh  stop.sh  validate_config.py
services/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_rate_limit.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+243 files in other folders)
